# skillrevise

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
data/skilllearnbench/: README.md  all_jobs.json  skillsbench_tasks.json
data/skilllearnbench/tasks/anthropic-poster-design-1/: instruction.md
data/skilllearnbench/tasks/anthropic-poster-design-2/: instruction.md
data/skilllearnbench/tasks/anthropic-poster-design-3/: instruction.md
data/skilllearnbench/tasks/anthropic-poster-design-4/: instruction.md
data/skillsbench/: README.md  all_jobs.json  skillsbench_tasks.json
data/swe-skills-bench/: README.md  all_jobs.json  skillsbench_tasks.json
docs/: benchmarks.md  overview.md  running.md
scripts/: README.md  __init__.py  audit_publishable_skills.py  export_skilllearnbench_as_skillsbench.py  export_swe_skills_bench_as_skillsbench.py  select_skilllearnbench_tasks.py  select_swe_tasks.py
skillrevise/: __init__.py  cli.py
skillrevise/benchmarks/: __init__.py  alfworld.py  convert_skillsbench.py  skilllearnbench.py  skillsbench.py  skillsbench_adapter.py  task_selection.py  verifier.py
skillrevise/core/: __init__.py  agents.py  artifacts.py  env.py  io.py  loop.py  metrics.py  models.py  reporting.py  runner.py
skillrevise/llm/: __init__.py  client.py  command.py
skillrevise/method/: __init__.py  authoring.py  diagnosis.py  principles.py  revision.py  skill_parser.py
tests/: test_benchmark_scripts.py  test_benchmarks.py  test_cli.py  test_core.py  test_llm.py  test_revision_loop.py  test_skill_authoring.py
(+486 files in other folders)
